--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "subscription-service-content",
+  "name": "subscription_update_v1.0.0",
   "version": "1.0.0",
-  "description": "M*EAN stack application using JWTs, Angular.js, MySQL, Express, Node.js and the Sequelize ORM.",
+  "description": "Subscription website using JWT, Express.js, Node.js, Angular.js, MySQL, Sequelize, Bootstrap 4 Material.",
   "main": "app/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app/server.js"
+    "start": "app/server.js"
   },
   "keywords": [
-    "subscription"
+    "subscription",
+    "mean",
+    "stack",
+    "sequelize-mysql"
   ],
-  "author": "sean riese",
+  "author": "Sean Riese",
   "license": "MIT",
   "dependencies": {
     "@juspay/simple-card-validator": "^1.2.1",
     "bcrypt": "^3.0.6",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "http": "0.0.0",
+    "body-parser": "^1.19.0",
+    "child_process": "^1.0.2",
+    "express": "^4.17.0",
+    "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
-    "nodemailer": "^6.1.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
-    "sequelize": "^5.6.0"
+    "sequelize": "^5.8.6"
   }
 }
