--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app/server.js"
+    "start": "node app/server.js"
   },
   "keywords": [
     "subscription",
